src/main/java/parser/mainparser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package parser.mainparser;
import data.*;
import java.util.*;
import validations.*;
import exceptions.CustomException;
import utils.*;
import types.*;
import ast.*;

public class Parser implements ParserConstants {

  final public int Start(Hashtable<String, Automaton> auto, ValidationChecks checks) throws ParseException, CustomException, TypingException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNDERSCORE:
      DeployTransition(auto,checks);
                {if (true) return 0;}
      break;
    case ID:
      NormalTransition(auto, checks);
                {if (true) return 0;}
      break;
    case 0:
      jj_consume_token(0);
                {if (true) return 1;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void DeployTransition(Hashtable<String, Automaton> auto, ValidationChecks checks) throws ParseException, CustomException, TypingException {
        Token iS;
        Token eS;
        String p;
        Transition t;
        Token isES = null;
        Boolean eC = false;
        Boolean rES = false;
        ASTNode postC = null;
        List<ASTId> gV = null;
        List<ASTVar> aV = null;
    iS = jj_consume_token(UNDERSCORE);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    p = ParticipantExtra();
    jj_consume_token(GT);
    t = DeployAction(auto);
    jj_consume_token(LBRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case TRUE:
    case FALSE:
    case LPAR:
    case NOT:
    case VAR:
    case Num:
    case ID:
      postC = Assertion();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(RBRACKET);
    eS = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      isES = jj_consume_token(PLUS);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
                Automaton a = auto.get(t.getId());
                if (a == null)
                a = auto.put(t.getId(), new Automaton(t.getId()));
        a = auto.get(t.getId());

                // transition
        t.setFromS(iS.image);
        if(isES != null)
                rES = true;
        t.setToS(eS.image);
        t.addParticipant(p);
        t.setExternalCall(eC);

        // asserion
        if(postC != null) {
                t.setPostCondition(postC.toString());
                if(postC.checkIfItHasVar()) {
                        gV = postC.getVars();
                                a.addGlobalVars(gV, t.getLocalVars());
                }
                if(postC.checkIfItHasIds()) {
                                aV = postC.getIds();
                                CommonUtils.addTypeToIds(aV, a.getGlobalVars(), t.getLocalVars());
                }
                postC.typeCheck();
                }

                // automaton
                a.addBothStates(iS.image, eS.image, rES);
        a.addTransition(t);
        a.addRoleParticipant(p,true);


        // checks
        checks.getGraph().addEdge(iS.image, eS.image, p);
        checks.getContractsRegistered().add(t.getId());
  }

  final public void NormalTransition(Hashtable<String, Automaton> auto, ValidationChecks checks) throws ParseException, CustomException, TypingException {
        Token iS;
        Token eS;
        String p;
        Transition t;
        Token isES = null;
        Boolean eC = false;
        Boolean rES = false;
        ASTNode postC = null;
        ASTNode preC = null;
        List<ASTId> lV = null;
        List<ASTVar> aV = null;
    iS = jj_consume_token(ID);
    jj_consume_token(LBRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case TRUE:
    case FALSE:
    case LPAR:
    case NOT:
    case VAR:
    case Num:
    case ID:
      preC = Assertion();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(RBRACKET);
    p = ParticipantExtra();
    eC = ExternalCall();
    t = NormalAction(auto);
    jj_consume_token(LBRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case TRUE:
    case FALSE:
    case LPAR:
    case NOT:
    case VAR:
    case Num:
    case ID:
      postC = Assertion();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(RBRACKET);
    eS = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      isES = jj_consume_token(PLUS);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
                Automaton a = auto.get(t.getId());
                if (a == null)
                a = auto.put(t.getId(), new Automaton(t.getId()));
        a = auto.get(t.getId());

                // transition
        t.setFromS(iS.image);
        if(isES != null)
                rES = true;
        t.setToS(eS.image);
        t.addParticipant(p);
        t.setExternalCall(eC);

        // asserion_pre
        if(preC != null) {
                t.setPostCondition(preC.toString());
                if(preC.checkIfItHasVar()) {
                        lV = preC.getVars();
                                t.addLocalVars(lV, a.getGlobalVars());
                }
                if(preC.checkIfItHasIds()) {
                                aV = preC.getIds();
                                CommonUtils.addTypeToIds(aV, a.getGlobalVars(), t.getLocalVars());
                }
                preC.typeCheck();
                }

                // asserion_post
        if(postC != null) {
                t.setPostCondition(postC.toString());
                if(postC.checkIfItHasVar()) {
                        lV = postC.getVars();
                                t.addLocalVars(lV, a.getGlobalVars());
                }
                if(postC.checkIfItHasIds()) {
                                aV = postC.getIds();
                                CommonUtils.addTypeToIds(aV, a.getGlobalVars(), t.getLocalVars());
                }
                postC.typeCheck();
                }

                // automaton
                a.addBothStates(iS.image, eS.image, rES);
        a.addTransition(t);
        a.addRoleParticipant(p,false);

                // graph
        checks.getGraph().addEdge(iS.image, eS.image, p);
  }

  final public boolean ExternalCall() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GT:
      jj_consume_token(GT);
               {if (true) return false;}
      break;
    case LT:
      jj_consume_token(LT);
               {if (true) return true;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String Participant() throws ParseException {
        Token p1;
        Token p2 = null;
        Token p3 = null;
    p1 = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLON:
      p2 = jj_consume_token(COLON);
      p3 = jj_consume_token(ID);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
                if(p2 == null)
                        {if (true) return p1.image;}
                else
                        {if (true) return p1.image.concat(p2.image).concat(p3.image);}
    throw new Error("Missing return statement in function");
  }

  final public String ParticipantExtra() throws ParseException {
        String p1;
        String p2;
        Token join;
        Set < String > parts = new HashSet < String > ();
    p1 = Participant();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MOREPART:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_1;
      }
      join = jj_consume_token(MOREPART);
      p2 = Participant();
                                                                   parts.add(join.image.concat(p2));
    }
                String concat = String.join("", parts);
                {if (true) return p1.concat(concat);}
    throw new Error("Missing return statement in function");
  }

  final public Transition DeployAction(Hashtable<String, Automaton> auto) throws ParseException {
        Token c;
        List<Param> param = null;
    jj_consume_token(STARTLABEL);
    jj_consume_token(LPAR);
    c = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      param = ParamList();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(RPAR);
                {if (true) return new Transition(c.image, "starts", ".", param);}
    throw new Error("Missing return statement in function");
  }

  final public Transition NormalAction(Hashtable<String, Automaton> auto) throws ParseException {
        Token c;
        String aType;
        Token aLabel;
        List<Param> param;
    c = jj_consume_token(ID);
    aType = OperationType();
    aLabel = jj_consume_token(ID);
    jj_consume_token(LPAR);
    param = ParamList();
    jj_consume_token(RPAR);
                Transition r = new Transition(c.image, aLabel.image, aType, param);
                {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public String OperationType() throws ParseException {
        Token aType;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      aType = jj_consume_token(MINUS);
      break;
    case DOT:
      aType = jj_consume_token(DOT);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                         {if (true) return aType.image;}
    throw new Error("Missing return statement in function");
  }

//	ASSERTIONS - PARAMETERS
  final public List<Param> ParamList() throws ParseException {
 List<Param> l = new LinkedList<Param>(); Token x; IType t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      x = jj_consume_token(ID);
      jj_consume_token(COLON);
      t = Type();
                                   l.add(new Param(x.image,t));
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        x = jj_consume_token(ID);
        jj_consume_token(COLON);
        t = Type();
                                           l.add(new Param(x.image,t));
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
          {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  final public IType Type() throws ParseException {
 IType t,t1; List<IType > types = new LinkedList<IType >();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
            t = IntType.singleton;
      break;
    case BOOL:
      jj_consume_token(BOOL);
             t = BoolType.singleton;
      break;
    case STRING:
      jj_consume_token(STRING);
               t = StringType.singleton;
      break;
    case ID:
      jj_consume_token(ID);
      jj_consume_token(COLON);
      jj_consume_token(PTYPE);
                            t = ParticipantType.singleton;
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

// ASSERTIONS
  final public ASTNode Assertion() throws ParseException {
  ASTNode e;
    e = Seq();
               {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Seq() throws ParseException {
  ASTNode e1,e2;
    e1 = Assign();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEQ:
      jj_consume_token(SEQ);
      e2 = Seq();
                        e1 = new ASTSeq(e1, e2);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Assign() throws ParseException {
  ASTNode e1,e2;
    e1 = Disjunction();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARASS:
      jj_consume_token(VARASS);
      e2 = Assign();
                        e1 = new ASTAssign(e1, e2);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Disjunction() throws ParseException {
  ASTNode e1,e2;
    e1 = Conjunction();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_3;
      }
      jj_consume_token(OR);
      e2 = Conjunction();
                             e1 = new ASTOr(e1,e2);
    }
    {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Conjunction() throws ParseException {
  ASTNode e1,e2;
    e1 = BooleanExp();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_4;
      }
      jj_consume_token(AND);
      e2 = BooleanExp();
                              e1 = new ASTAnd(e1,e2);
    }
    {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode BooleanExp() throws ParseException {
  ASTNode e1,e2;
    e1 = Exp();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
      case NEQ:
      case LEQ:
      case GEQ:
      case LT:
      case GT:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        jj_consume_token(EQ);
        e2 = BooleanExp();
                                   e1 = new ASTEq(e1,e2);
        break;
      case NEQ:
        jj_consume_token(NEQ);
        e2 = BooleanExp();
                                    e1 = new ASTNeq(e1,e2);
        break;
      case LT:
        jj_consume_token(LT);
        e2 = Exp();
                            e1 = new ASTLt(e1,e2);
        break;
      case GT:
        jj_consume_token(GT);
        e2 = Exp();
                            e1 = new ASTGt(e1,e2);
        break;
      case LEQ:
        jj_consume_token(LEQ);
        e2 = Exp();
                             e1 = new ASTLeq(e1,e2);
        break;
      case GEQ:
        jj_consume_token(GEQ);
        e2 = Exp();
                             e1 = new ASTGeq(e1,e2);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                                                           {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Exp() throws ParseException {
  ASTNode e1, e2;
    e1 = Term();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        e2 = Term();
                            e1 = new ASTAdd(e1,e2);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        e2 = Term();
                             e1 = new ASTSub(e1,e2);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
       {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Term() throws ParseException {
  ASTNode e1, e2;
    e1 = Unary();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
      case DIV:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
        jj_consume_token(TIMES);
        e2 = Unary();
                              e1 = new ASTMul(e1,e2);
        break;
      case DIV:
        jj_consume_token(DIV);
        e2 = Unary();
                            e1 = new ASTDiv(e1,e2);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
       {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Unary() throws ParseException {
  ASTNode e1, e2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case LPAR:
    case VAR:
    case Num:
    case ID:
      e1 = Call();
                   {if (true) return e1;}
      break;
    case MINUS:
      jj_consume_token(MINUS);
      e1 = Unary();
                              {if (true) return new ASTSub(new ASTNum(0),e1);}
      break;
    case NOT:
      jj_consume_token(NOT);
      e1 = Unary();
                          {if (true) return new ASTNot(e1);}
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Call() throws ParseException {
 ASTNode e1; List<ASTNode > l;
    e1 = Fact();
   {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Fact() throws ParseException {
  Token x; ASTNode e1, e2,e3; IType t; List<Param > l;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Num:
      x = jj_consume_token(Num);
                    {if (true) return new ASTNum(Integer.parseInt(x.image));}
      break;
    case LPAR:
      jj_consume_token(LPAR);
      e1 = Seq();
      jj_consume_token(RPAR);
                                   {if (true) return e1;}
      break;
    case TRUE:
      jj_consume_token(TRUE);
                   {if (true) return new ASTBool(true);}
      break;
    case FALSE:
      jj_consume_token(FALSE);
                    {if (true) return new ASTBool(false);}
      break;
    case VAR:
      jj_consume_token(VAR);
      t = Type();
      x = jj_consume_token(ID);
                                        {if (true) return new ASTId(x.image, t);}
      break;
    case ID:
      // get type of existing variable
              x = jj_consume_token(ID);
                     {if (true) return new ASTVar(x.image);}
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[26];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x1001,0xa0098200,0x100,0xa0098200,0xa0098200,0x100,0x18000000,0x2000,0x0,0x4000,0x200,0x4000,0x0,0xb0,0x40000000,0x0,0x200000,0x400000,0x1f800000,0x1f800000,0x300,0x300,0xc00,0xc00,0xa0098200,0x80098000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x20,0x30,0x0,0x30,0x30,0x0,0x0,0x0,0x2,0x0,0x8,0x0,0x20,0x20,0x0,0x1,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x30,0x30,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }
